--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,24 +1,89 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>WaldoXP Portfolio</title>
+  <meta name="description" content="WaldloXP Portfolio by Waldo Sanabria Vega. Full-stack web developer building mobile-first UIs and Node/Express APIs. Explore projects and get in touch." />
+  <link rel="canonical" href="https://galladex3.github.io/" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="WaldoXP — Web Developer" />
+  <meta property="og:description" content="Portfolio and projects by Waldo Sanabria Vega." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://galladex3.github.io/" />
+  <meta name="theme-color" content="#0ea5e9" />
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Hi, I’m WaldoXP 👋</h1>
-    <p>Responsive Web Developer | Gamer | Creator</p>
+  <a class="skip" href="#main">Skip to content</a>
+
+  <header class="site-header">
+    <nav class="container nav">
+      <a class="brand" href="/">Waldo<span>XP</span></a>
+      <ul>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <div class="hero container">
+      <h1>Hi, I’m Waldo — Full-Stack Web Developer</h1>
+      <p class="lead">
+        I build mobile-first UIs and Node/Express APIs. I recently completed all four FreeCodeCamp certifications.
+      </p>
+      <p class="cta">
+        <a class="btn" href="https://github.com/GalladeX3" target="_blank" rel="noopener">GitHub</a>
+        <a class="btn btn-outline" href="#projects">See Projects</a>
+      </p>
+    </div>
   </header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>I build mobile-first, responsive websites. Currently leveling up my skills and helping others with custom web solutions.</p>
-  </section>
+  <main id="main" class="container">
+    <section id="projects" aria-labelledby="projects-title">
+      <h2 id="projects-title">Featured Projects</h2>
+      <div class="grid">
+        <!-- Replace placeholders with real links as you polish each repo -->
+        <article class="card">
+          <h3>Timestamp Microservice</h3>
+          <p>REST API converting date strings and Unix timestamps.</p>
+          <p><a href="#" class="link">Repo</a></p>
+        </article>
+        <article class="card">
+          <h3>URL Shortener</h3>
+          <p>Shortens URLs and validates hosts with DNS lookup.</p>
+          <p><a href="#" class="link">Repo</a></p>
+        </article>
+        <article class="card">
+          <h3>Markdown Previewer</h3>
+          <p>Live Markdown editor with preview pane (React).</p>
+          <p><a href="#" class="link">Repo</a></p>
+        </article>
+      </div>
+    </section>
 
-  <footer>
-    <p>Contact: waldo.sana10@email.com</p>
+    <section id="about" aria-labelledby="about-title">
+      <h2 id="about-title">About</h2>
+      <p>
+        Developer focused on clean, responsive interfaces and solid backend APIs. Passionate about Nintendo-inspired UI design and JRPG aesthetics.
+      </p>
+    </section>
+
+    <section id="contact" aria-labelledby="contact-title">
+      <h2 id="contact-title">Contact</h2>
+      <p>
+        Email: <a href="mailto:waldo.sana10@gmail.com">waldo.sana10@gmail.com</a>
+      </p>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <small>© 2025 Waldo Sanabria Vega</small>
+    </div>
   </footer>
 </body>
 </html>
+
