--- a/index.html/index.html
+++ b/index.html/index.html
@@ -14,6 +14,24 @@
   <meta property="og:url" content="https://galladex3.github.io/" />
   <meta name="theme-color" content="#0ea5e9" />
 
+  <!-- FAVICONS -->
+<link rel="icon" href="/waldoxp-favicon-custom.ico" sizes="any">
+<link rel="icon" type="image/png" href="/waldoxp-favicon-waldoXP.png" sizes="512x512">
+
+<!-- SOCIAL PREVIEW (OG/Twitter) -->
+<meta property="og:title" content="WaldoXP Portfolio">
+<meta property="og:description" content="Projects • Demos • Contact">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://galladex3.github.io/">
+<meta property="og:image" content="https://galladex3.github.io/waldoxp-og.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="WaldoXP Portfolio">
+<meta name="twitter:description" content="Projects • Demos • Contact">
+<meta name="twitter:image" content="https://galladex3.github.io/waldoxp-og.png">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
