--- a/index.html/index.html
+++ b/index.html/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>WaldoXP Portfolio</title>
   <meta name="description" content="WaldloXP Portfolio by Waldo Sanabria Vega. Full-stack web developer building mobile-first UIs and Node/Express APIs. Explore projects and get in touch." />
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 
   <!-- Open Graph -->
   <meta property="og:title" content="WaldoXP — Web Developer" />
