--- a/index.html
+++ b/index.html
@@ -52,17 +52,20 @@
         <article class="card">
           <h3>Timestamp Microservice</h3>
           <p>REST API converting date strings and Unix timestamps.</p>
-          <p><a class="link" href="#">Repo</a></p>
+          <p><a class="link" href="https://github.com/GalladeX3/project-timestamp-microservice.git">Repo</a>
+            <a class="link" href="https://project-timestamp-microservice-production.up.railway.app">Live</a></p>
         </article>
         <article class="card">
           <h3>URL Shortener</h3>
           <p>Shortens URLs and validates hosts with DNS lookup.</p>
-          <p><a class="link" href="#">Repo</a></p>
+          <p><a class="link" href="https://github.com/GalladeX3/project-urlshortener">Repo</a>
+            <a class="link" href="https://project-urlshortener-production.up.railway.app">Live</a></p>
         </article>
         <article class="card">
-          <h3>Markdown Previewer</h3>
-          <p>Live Markdown editor with preview pane (React).</p>
-          <p><a class="link" href="#">Repo</a></p>
+          <h3>Exercise Tracker Test</h3>
+          <p>Exercise Tracker Test with preview pane</p>
+          <p><a class="link" href="https://github.com/GalladeX3/exercise-tracker-test-project">Repo</a>
+             <a class="link" href="https://exercise-tracker-test-project-production.up.railway.app">Live</a></p>
         </article>
       </div>
     </section>
