--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="./style.css" />
 
   <!-- Favicons (safe if missing; add later) -->
-  <link rel="icon" href="/waldoxp-favicon-custom.ico" sizes="any">
-  <link rel="icon" type="image/png" href="/waldoxp-favicon-waldoXP.png" sizes="192x192">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+ <link rel="icon" href="./waldoxp-favicon-custom.ico" sizes="any">
+<link rel="icon" type="image/png" href="./waldoxp-favicon-waldoXP.png" sizes="192x192">
+<link rel="apple-touch-icon" href="./apple-touch-icon.png">
 
   <!-- Open Graph -->
   <meta property="og:title" content="WaldoXP Portfolio" />
